review_tool/test-cases/good/good-event-delegation.js
document.addEventListener('click', (e) => {
  if (e.target.matches('.btn-add-to-cart')) {
    handleAddToCart(e);
  }
});

document.addEventListener('ShoptetDOMCartContentLoaded', () => {
  updateCartBadge();
});
